[gd_scene load_steps=6 format=3 uid="uid://do4kpmrits8m7"]

[ext_resource type="Script" uid="uid://bhffq6hiip8gv" path="res://scripts/dice_tray.gd" id="1_xrqg8"]

[sub_resource type="ViewportTexture" id="ViewportTexture_h6acc"]
viewport_path = NodePath("3DView/SubViewport")

[sub_resource type="CylinderMesh" id="CylinderMesh_h6acc"]
top_radius = 2.0
height = 0.105
radial_segments = 16

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_h6acc"]
data = PackedVector3Array(0.191342, 0.0525, -0.46194, 6.12303e-17, 0.0525, -0.5, 0.191342, -0.0525, -0.46194, 0.191342, -0.0525, 0.46194, 0.353553, -0.0525, -0.353553, 0.191342, -0.0525, -0.46194, 6.12303e-17, 0.0525, -0.5, 6.12303e-17, -0.0525, -0.5, 0.191342, -0.0525, -0.46194, 0.191342, 0.0525, -0.46194, 0.191342, -0.0525, -0.46194, 0.353553, -0.0525, -0.353553, 0.191342, -0.0525, 0.46194, 0.46194, -0.0525, -0.191342, 0.353553, -0.0525, -0.353553, 0.353553, 0.0525, -0.353553, 0.353553, -0.0525, -0.353553, 0.46194, -0.0525, -0.191342, 0.46194, 0.0525, -0.191342, 0.46194, -0.0525, -0.191342, 0.5, -0.0525, 3.06152e-17, 0.191342, -0.0525, 0.46194, -0.191342, -0.0525, 0.46194, 0, -0.0525, 0.5, 0.191342, 0.0525, 0.46194, 0.191342, -0.0525, 0.46194, 0, -0.0525, 0.5, 0.191342, -0.0525, 0.46194, 0.5, -0.0525, 3.06152e-17, 0.46194, -0.0525, -0.191342, 0.191342, -0.0525, 0.46194, 0.46194, -0.0525, 0.191342, 0.5, -0.0525, 3.06152e-17, 0.191342, -0.0525, 0.46194, 0.353553, -0.0525, 0.353553, 0.46194, -0.0525, 0.191342, 0.5, 0.0525, 3.06152e-17, 0.5, -0.0525, 3.06152e-17, 0.46194, -0.0525, 0.191342, 0.46194, 0.0525, 0.191342, 0.46194, -0.0525, 0.191342, 0.353553, -0.0525, 0.353553, 0.353553, 0.0525, 0.353553, 0.353553, -0.0525, 0.353553, 0.191342, -0.0525, 0.46194, 0.191342, -0.0525, 0.46194, 0.191342, -0.0525, -0.46194, 6.12303e-17, -0.0525, -0.5, 0, 0.0525, 0.5, 6.12303e-17, 0.0525, -0.5, 0.191342, 0.0525, -0.46194, 0, 0.0525, 0.5, 0.191342, 0.0525, -0.46194, 0.353553, 0.0525, -0.353553, 0.353553, 0.0525, -0.353553, 0.191342, 0.0525, -0.46194, 0.353553, -0.0525, -0.353553, 0.46194, 0.0525, -0.191342, 0.353553, 0.0525, -0.353553, 0.46194, -0.0525, -0.191342, 0.5, 0.0525, 3.06152e-17, 0.46194, 0.0525, -0.191342, 0.5, -0.0525, 3.06152e-17, 0, 0.0525, 0.5, 0.353553, 0.0525, -0.353553, 0.46194, 0.0525, -0.191342, 0, 0.0525, 0.5, 0.191342, 0.0525, 0.46194, 0, -0.0525, 0.5, 0.191342, 0.0525, 0.46194, 0.353553, 0.0525, 0.353553, 0.191342, -0.0525, 0.46194, 0, 0.0525, 0.5, 0.353553, 0.0525, 0.353553, 0.191342, 0.0525, 0.46194, 0.46194, 0.0525, 0.191342, 0.5, 0.0525, 3.06152e-17, 0.46194, -0.0525, 0.191342, 0.353553, 0.0525, 0.353553, 0.46194, 0.0525, 0.191342, 0.353553, -0.0525, 0.353553, 0, 0.0525, 0.5, 0.46194, 0.0525, -0.191342, 0.5, 0.0525, 3.06152e-17, 0, 0.0525, 0.5, 0.5, 0.0525, 3.06152e-17, 0.46194, 0.0525, 0.191342, 0, 0.0525, 0.5, 0.46194, 0.0525, 0.191342, 0.353553, 0.0525, 0.353553, -0.46194, 0.0525, -0.191342, -0.5, 0.0525, -9.18455e-17, -0.46194, -0.0525, -0.191342, -0.46194, 0.0525, -0.191342, -0.46194, -0.0525, -0.191342, -0.353553, -0.0525, -0.353553, -0.5, 0.0525, -9.18455e-17, -0.5, -0.0525, -9.18455e-17, -0.46194, -0.0525, -0.191342, 0.191342, -0.0525, 0.46194, -0.353553, -0.0525, -0.353553, -0.46194, -0.0525, -0.191342, 0.191342, -0.0525, 0.46194, -0.191342, -0.0525, -0.46194, -0.353553, -0.0525, -0.353553, -0.191342, 0.0525, -0.46194, -0.191342, -0.0525, -0.46194, 6.12303e-17, -0.0525, -0.5, 0.191342, -0.0525, 0.46194, -0.46194, -0.0525, -0.191342, -0.5, -0.0525, -9.18455e-17, 0.191342, -0.0525, 0.46194, -0.5, -0.0525, -9.18455e-17, -0.46194, -0.0525, 0.191342, -0.46194, 0.0525, 0.191342, -0.46194, -0.0525, 0.191342, -0.5, -0.0525, -9.18455e-17, -0.353553, 0.0525, 0.353553, -0.353553, -0.0525, 0.353553, -0.46194, -0.0525, 0.191342, 0.191342, -0.0525, 0.46194, -0.46194, -0.0525, 0.191342, -0.353553, -0.0525, 0.353553, 0.191342, -0.0525, 0.46194, -0.353553, -0.0525, 0.353553, -0.191342, -0.0525, 0.46194, -0.191342, 0.0525, 0.46194, -0.191342, -0.0525, 0.46194, -0.353553, -0.0525, 0.353553, 0, 0.0525, 0.5, 0, -0.0525, 0.5, -0.191342, -0.0525, 0.46194, -0.353553, 0.0525, -0.353553, -0.46194, 0.0525, -0.191342, -0.353553, -0.0525, -0.353553, -0.353553, 0.0525, -0.353553, -0.353553, -0.0525, -0.353553, -0.191342, -0.0525, -0.46194, 0, 0.0525, 0.5, -0.46194, 0.0525, -0.191342, -0.353553, 0.0525, -0.353553, -0.191342, 0.0525, -0.46194, -0.353553, 0.0525, -0.353553, -0.191342, -0.0525, -0.46194, 6.12303e-17, 0.0525, -0.5, -0.191342, 0.0525, -0.46194, 6.12303e-17, -0.0525, -0.5, 0, 0.0525, 0.5, -0.353553, 0.0525, -0.353553, -0.191342, 0.0525, -0.46194, 0, 0.0525, 0.5, -0.191342, 0.0525, -0.46194, 6.12303e-17, 0.0525, -0.5, -0.5, 0.0525, -9.18455e-17, -0.46194, 0.0525, 0.191342, -0.5, -0.0525, -9.18455e-17, -0.46194, 0.0525, 0.191342, -0.353553, 0.0525, 0.353553, -0.46194, -0.0525, 0.191342, -0.353553, 0.0525, 0.353553, -0.191342, 0.0525, 0.46194, -0.353553, -0.0525, 0.353553, 0, 0.0525, 0.5, -0.5, 0.0525, -9.18455e-17, -0.46194, 0.0525, -0.191342, 0, 0.0525, 0.5, -0.46194, 0.0525, 0.191342, -0.5, 0.0525, -9.18455e-17, 0, 0.0525, 0.5, -0.353553, 0.0525, 0.353553, -0.46194, 0.0525, 0.191342, -0.191342, 0.0525, 0.46194, 0, 0.0525, 0.5, -0.191342, -0.0525, 0.46194, 0, 0.0525, 0.5, -0.191342, 0.0525, 0.46194, -0.353553, 0.0525, 0.353553, 0.191342, -0.0525, 0.46194, 6.12303e-17, -0.0525, -0.5, -0.191342, -0.0525, -0.46194)

[sub_resource type="BoxShape3D" id="BoxShape3D_upiwx"]
size = Vector3(3.94238, 0.0996094, 3.83301)

[node name="DiceTray" type="Node2D"]
script = ExtResource("1_xrqg8")
attacker_army_size = 3
defender_player_id = 1
defender_army_size = 5

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="Viewer" type="Sprite2D" parent="."]
position = Vector2(487, 264)
texture = SubResource("ViewportTexture_h6acc")

[node name="3DView" type="Node3D" parent="."]

[node name="SubViewport" type="SubViewport" parent="3DView"]

[node name="StaticBody3D" type="StaticBody3D" parent="3DView/SubViewport"]

[node name="CSGMesh3D" type="CSGMesh3D" parent="3DView/SubViewport/StaticBody3D"]
use_collision = true
mesh = SubResource("CylinderMesh_h6acc")

[node name="CSGBakedCollisionShape3D" type="CollisionShape3D" parent="3DView/SubViewport/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_h6acc")

[node name="Camera3D" type="Camera3D" parent="3DView/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.216133, 0.976364, 0, -0.976364, 0.216133, 0, 3.67344, 1.01394)
fov = 42.1875

[node name="DiceReader" type="Area3D" parent="3DView/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.11343, 0)
collision_layer = 2
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="3DView/SubViewport/DiceReader"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.228971, 0)
shape = SubResource("BoxShape3D_upiwx")

[node name="AttackerSpawn" type="Marker3D" parent="3DView/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.52698, 0.368042, 0)

[node name="DefenderSpawn" type="Marker3D" parent="3DView/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.527, 0.368, 0)

[node name="ReadTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="ReadTimer" to="." method="_on_read_timer_timeout"]
